--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 .header_container {
     width: 100%;
-    height: 64px;
+    height: 82px;
     background-color: rgb(10, 10, 10);
     color: white;
     padding: 0 36px 0 36px;
@@ -25,4 +25,8 @@
 
 .right_container {
     display: flex;
+}
+
+.logo_riot {
+    margin-right: 2px;
 }
