--- a/src/app/item-header/item-header.component.html
+++ b/src/app/item-header/item-header.component.html
@@ -1,3 +1,5 @@
-<li>
-    <a href='{{ hrefUrl }}' target="_blank" rel="noopener">{{ nameItem }}</a>
-</li>
+<div class="item_container">
+    <li class="li_container">
+        <a class="item_link" href='{{ hrefUrl }}' target="_blank" rel="noopener">{{ nameItem }}</a>
+    </li>
+</div>
