--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,13 +8,13 @@
                 <svg height="27" fill="#777" width="8" viewBox="0 0 8 5"><title>mainMenuDownNonHover</title><path d="m.707 1.707 2.586 2.586a1 1 0 0 0 1.414 0l2.586-2.586C7.923 1.077 7.477 0 6.586 0H1.414C.524 0 .077 1.077.707 1.707Z"></path></svg>
             </div>
             <div>
-                <a href="/">
+                <a href="#">
                     <div>
                         <img src="https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar_live/0a84802ee86faba072060b94af24f722f3aabb9c-27x32.svg?&h=50&fit=max" alt="Logo de Arcane">
                     </div>
                 </a>
             </div>
-            <ul>
+            <ul class="items_container">
                 @for (item of items; track $index) {
                     <app-item-header [nameItem]="item.description" [hrefUrl]="item.href" />
                 }
