--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -29,10 +29,6 @@
     height: 25px;
 }
 
-.right_container {
-    display: flex;
-}
-
 .logo_riot {
     margin-right: 2px;
 }
@@ -42,4 +38,41 @@
     display: flex;
     list-style-type: none;
     gap: 4px;
+}
+
+.right_container {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.language_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    padding: 8px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.language_button:hover {
+    background-color: #222;
+}
+
+.login_button {
+    display: block;
+    padding: 8px 16px 8px 16px;
+    background-color: #222;
+    border: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    border-radius: 4px;
+}
+
+.href_button {
+    text-decoration: none;
+    color:white
 }
