--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
                 </svg>
                 <svg height="27" fill="#777" width="8" viewBox="0 0 8 5"><title>mainMenuDownNonHover</title><path d="m.707 1.707 2.586 2.586a1 1 0 0 0 1.414 0l2.586-2.586C7.923 1.077 7.477 0 6.586 0H1.414C.524 0 .077 1.077.707 1.707Z"></path></svg>
             </div>
-            <div>
+            <div class="logo_arcane">
                 <a href="#">
                     <div>
                         <img src="https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar_live/0a84802ee86faba072060b94af24f722f3aabb9c-27x32.svg?&h=50&fit=max" alt="Logo de Arcane">
@@ -28,6 +28,9 @@
             </button>
             <button class="login_button">
                 <a class="href_button" href="/">Iniciar sesión</a>
+            </button>
+            <button class="menu_button">
+                <svg width="48" height="48" viewBox="0 0 48 48"><title>burgerNav</title><path d="M125.6 119.08a18 18 0 0 1 18-18h12a18 18 0 0 1 18 18v12a18 18 0 0 1-18 18h-12a18 18 0 0 1-18-18Z" transform="translate(-125.6 -101.08)" style="fill:#222;fill-opacity:.2"></path><path d="M140.6 119.08h18v2h-18Zm0 5h18v2h-18Zm0 7v-2h18v2Z" transform="translate(-125.6 -101.08)"></path></svg>
             </button>
         </div>
     </div>
