--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header_container">
+<header id="header" class="header_container">
     <div class="main_container">
         <div class="left_container">
             <div class="svg_left_container">
