--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-    background-color: #333;
+    background-color: rgb(10, 10, 10);
     color: #ddd;
     font-family: "FF Mark W05",Arial,sans-serif;
 }
