--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,10 @@
 <main class="relative_container">
     <div class="main_container">
-        <div class="video_container">
-            <video class="video" autoplay role="presentation" muted loop [playsInline]="true">
+        <div class="video_container" (click)="playVideo()">
+            <video class="video" [muted]="true" [autoplay]="true" [loop]="true" [playsInline]="true" role="presentation">
                 <source src="https://cmsassets.rgpub.io/sanity/files/dsfx7636/news/8ca377434ec75445478d3d5d88acbd2aa5e8e86c.mp4" type="video/mp4">
-            </video>
+                No compatible
+            </video>                         
         </div>
         <div class="title_container">
             <div class="image_container">
