Added netflix advertising

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -17,5 +17,15 @@
         <div class="button_container">
             <a class="button_ref" href="https://www.netflix.com/title/81435684" target="_blank" rel="noopener">Ver</a>
         </div>
+        <div class="netflix_container">
+            <p class="netflix_description">
+                Solo en
+            </p>
+            <div class="netflix_image_container">
+                <a href="https://www.netflix.com/title/81435684" target="_blank" rel="noopener">
+                    <img class="netflix_image" src="https://cmsassets.rgpub.io/sanity/images/dsfx7636/news/b2028c866281c87ebfb00ec33efbc9f7c0682bba-239x64.png?auto=format&fit=fill&q=80&h=40" alt="Logo de netflix">
+                </a>
+            </div>
+        </div>
     </div>
 </main>
