--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -79,3 +79,33 @@
     text-decoration: none;
     color: inherit;
 }
+
+.netflix_container {
+    position: absolute;
+    bottom: 228px;
+    right: 46px;
+    background-color: rgba(10, 10, 10, 0.72);    ;
+    font-size: 18px;
+    padding: 20px 58px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    clip-path: polygon(100% 0, 100% 80%, 90% 100%, 0 100%, 0 0);
+}
+
+.netflix_description{
+    text-transform: uppercase;
+    margin-bottom: 16px;
+}
+
+.netflix_image_container {
+    width: 124px;
+    overflow: hidden;
+}
+
+.netflix_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
