--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="netflix_container">
             <p class="netflix_description">
-                Solo en
+                Solo por
             </p>
             <div class="netflix_image_container">
                 <a href="https://www.netflix.com/title/81435684" target="_blank" rel="noopener">
