Momentane advance in carousel

--- a/src/app/item-small-carousel/item-small-carousel.component.html
+++ b/src/app/item-small-carousel/item-small-carousel.component.html
@@ -4,7 +4,7 @@
             <p>{{ description }}</p>
         </div>
         <div class="container_image">
-            <img class="image_item" src="{{ image }}" alt="{{ description }}">
+            <img class="image_item" src="{{ image }}" alt="{{ description }}" draggable="false">
         </div>
         <div class="svg_container">
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 448 512">
