Improving logic in carousel

--- a/src/app/small-carousel/small-carousel.component.html
+++ b/src/app/small-carousel/small-carousel.component.html
@@ -1,10 +1,13 @@
-<div class="carousel_container" (mousedown)="onDragStart($event)"
-(mousemove)="onDragMove($event)"
-(mouseup)="onDragEnd()"
-(mouseleave)="onDragEnd()">
-    <ol class="container_items">
-        @for (item of items; track $index) {
-            <app-item-small-carousel [image]="item.image" [description]="item.name" [hrefUrl]="item.href" />
-        }
-    </ol>
+<div class="carousel_container">
+    <div class="testing">
+        <ol class="container_items">
+            @for (item of items; track $index) {
+                <app-item-small-carousel [image]="item.image" [description]="item.name" [hrefUrl]="item.href" />
+            }
+        </ol>
+        <div class="buttons_container">
+            <button (click)="onBackward()">ATRAS</button>
+            <button (click)="onForward()" >ADELANTE</button>
+        </div>
+    </div>
 </div>
