--- a/src/app/small-carousel/small-carousel.component.css
+++ b/src/app/small-carousel/small-carousel.component.css
@@ -1,14 +1,37 @@
 .carousel_container {
     position: absolute;
-    bottom: 0;
-    overflow-x: scroll;
-    max-width: 100vw;
-    -ms-overflow-style: none; /* IE y Edge */
-    scrollbar-width: none;    /* Firefox */
+    bottom: 0px;
 }
 
 .container_items {
-    padding: 0 52px;
     display: flex;
     column-gap: 24px;
+    transform: translate3d(0px, 0px, 0px);
+    /* transform: translate3d(-354px, 0px, 0px); */
+    /* transform: translate3d(-670px, 0px, 0px); */
+    transition: transform 0.3s ease-in-out;
+}
+
+.testing {
+    position: relative;
+    padding: 0 48px;
+    width: 100%;
+    background-color: aqua;
+}
+
+
+
+ /* MOMENTANEO */
+
+
+.buttons_container {
+    position: absolute;
+    top: -30px  ;
+
+}
+
+.buttons_container button {
+    background-color: brown;
+    width: 200px;
+    cursor: pointer;
 }
