--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,6 +1,6 @@
 .relative_container {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + 42px);
     position: relative;
     font-family: Tungsten-Bold, sans-serif;
     overflow: hidden;       /*POR VERSE*/
@@ -13,6 +13,19 @@
 .video_container {
     height: 100%;
     overflow: hidden;
+    position: relative;
+    box-shadow: inset 0px -40px 48px -3px rgba(10, 10, 10, 0.77);
+}
+
+.video_container::before {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    box-shadow: inset 0px -70px 48px -3px rgba(10, 10, 10, 0.9);
 }
 
 .video {
@@ -84,7 +97,7 @@
 
 .netflix_container {
     position: absolute;
-    bottom: 228px;
+    bottom: 280px;
     right: 46px;
     background-color: rgba(10, 10, 10, 0.72);    ;
     font-size: 18px;
