--- a/src/app/item-small-carousel/item-small-carousel.component.css
+++ b/src/app/item-small-carousel/item-small-carousel.component.css
@@ -7,6 +7,13 @@
     user-select: none;
 }
 
+@media screen and (max-width:520px) {
+    .main_container {
+        width: auto;
+        width: clamp(120px, 60vw ,330px)
+    }
+}
+
 .item_button {
     background-color: transparent;
     display: block;
