--- a/src/app/small-carousel/small-carousel.component.css
+++ b/src/app/small-carousel/small-carousel.component.css
@@ -19,6 +19,18 @@
     width: 100%;
 }
 
+@media screen and (max-width: 400px) {
+    .testing {
+        padding: 0 24px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .buttons_container {
+        display: none;
+    }
+}
+
  /* MOMENTANEO */
 
 
