Added mousedown and mouseup in carousel

--- a/src/app/notification-card/notification-card.component.html
+++ b/src/app/notification-card/notification-card.component.html
@@ -1,7 +1,7 @@
 <li class="item_notification_container">
     <button class="button_notification_container">
         <div class="image_container_notification">
-            <img class="image_notification" src="{{ imageUrl }}" alt="{{ title }}">
+            <img class="image_notification" src="{{ imageUrl }}" alt="{{ title }}" [draggable]="false">
         </div>
         <div class="svg_notification_container">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
