--- a/src/app/notification-section/notification-section.component.html
+++ b/src/app/notification-section/notification-section.component.html
@@ -5,4 +5,19 @@
             <app-notification-card [title]="item.title" [description]="item.description" [imageUrl]="item.image" [dateNotification]="item.date" />
         }
     </ol>
+    <div class="navegation_section">
+        <div class="line_container" dir="rtl">
+            <hr>
+        </div>
+        <div class="buttons_container">
+            <!-- <button (click)="onBackward()" class="button_left" [disabled]="!buttonLeft"> -->
+            <button id="button_left" class="button_left" (click)="onBackward()" [disabled]="!buttonLeft">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="20" viewBox="0 0 15 15"><path d="M8.293 2.293a1 1 0 0 1 1.414 0l4.5 4.5a1 1 0 0 1 0 1.414l-4.5 4.5a1 1 0 0 1-1.414-1.414L11 8.5H1.5a1 1 0 0 1 0-2H11L8.293 3.707a1 1 0 0 1 0-1.414"/></svg>
+            </button>
+            <!-- <button (click)="onForward()" class="button_right" [disabled]="!buttonRight"> -->
+            <button id="button_right" class="button_right" (click)="onForward()" [disabled]="!buttonRight">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="20" viewBox="0 0 15 15"><path d="M8.293 2.293a1 1 0 0 1 1.414 0l4.5 4.5a1 1 0 0 1 0 1.414l-4.5 4.5a1 1 0 0 1-1.414-1.414L11 8.5H1.5a1 1 0 0 1 0-2H11L8.293 3.707a1 1 0 0 1 0-1.414"/></svg>
+            </button>
+        </div>
+    </div>
 </section>
