--- a/src/app/notification-section/notification-section.component.html
+++ b/src/app/notification-section/notification-section.component.html
@@ -7,7 +7,7 @@
     </ol>
     <div class="navegation_section">
         <div class="line_container" dir="rtl">
-            <hr>
+            <hr id="line">
         </div>
         <div class="buttons_container">
             <!-- <button (click)="onBackward()" class="button_left" [disabled]="!buttonLeft"> -->
