--- a/src/app/social-network-item/social-network-item.component.css
+++ b/src/app/social-network-item/social-network-item.component.css
@@ -1,4 +1,14 @@
 .item_social_network_container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
+}
+
+.container_referente {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
