--- a/src/app/social-network-item/social-network-item.component.html
+++ b/src/app/social-network-item/social-network-item.component.html
@@ -1,6 +1,6 @@
 <a [href]="href" [title]="alt" target="_blank" class="item_social_network_container" >  
     <li>
-        <div [id]="id">
+        <div class="container_referente" [id]="id">
         </div>
     </li>
 </a>
