--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <div>
     <app-header />
     <app-main />
-    <div style="height: 100vh;">
-        footer
-    </div>
+    <app-footer />
 </div>
-
 <router-outlet />
