--- a/src/app/playlist-section/playlist-section.component.css
+++ b/src/app/playlist-section/playlist-section.component.css
@@ -2,6 +2,9 @@
     width: 100%;
     height: calc(100vh - 90px);
     position: relative;
+    max-width: 2000px;
+    max-height: 800px;
+    margin: auto;
 }
 
 .background_container {
