--- a/src/app/characters-section/characters-section.component.css
+++ b/src/app/characters-section/characters-section.component.css
@@ -5,6 +5,17 @@
     align-items: center;
     max-width: 2000px;
     margin: auto;
+    position: relative;
+}
+
+.background_container {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: calc(100%);
+    height: 100%;
+    z-index: -10;
 }
 
 .characters_section > div {
