--- a/src/app/characters-section/characters-section.component.html
+++ b/src/app/characters-section/characters-section.component.html
@@ -1,4 +1,7 @@
 <section class="characters_section" draggable="false">
+    <div class="background_container">
+        <img src="https://cmsassets.rgpub.io/sanity/images/dsfx7636/news/a896937c9837514617dbe97f9a1ac0baad9b1df5-2000x762.png?auto=format&fit=fill&q=80&h=762" alt=" background" class="image">
+    </div>
     <div class="description_container">
         <div class="titles_container">
             <span>Temporada 2 de Arcane</span>
