--- a/src/app/characters-section/characters-section.component.css
+++ b/src/app/characters-section/characters-section.component.css
@@ -38,6 +38,8 @@
 
 .carousel_main_container {
     user-select: none;
+    transform: translate3d(0,0,0);
+    width: 100%;
 }
 
 .titles_container h2 {
@@ -48,10 +50,7 @@
 .carousel_container {
     margin-top: 36px;
     display: flex;
-    gap: 64px;
     list-style: none;
-    filter: brightness(50%);
-    padding-left: 24px;
 }
 
 .item_carousel {
@@ -60,8 +59,13 @@
     align-items: center;
     font-size: 14px;
     gap: 24px;
-    width: 80px;
+    min-width: 120px;
     transition: transform 0.3s ease-in-out;
+    filter: brightness(50%);
+}
+
+.item_carousel:first-child {
+    filter: brightness(100%);
 }
 
 .item_carousel:hover {
@@ -78,7 +82,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: left;
 }
 
 .character_image_container {
